# Aethern

./: .gitignore  README.md
backend/: CMakeLists.txt
backend/src/auth/: AuthManager.cpp  AuthManager.hpp  User.cpp  User.hpp
backend/src/cli/: main.cpp
backend/src/core/: Item.cpp  Item.hpp  Scheduler.cpp  Scheduler.hpp  TagManager.cpp  TagManager.hpp
backend/src/storage/: storage.cpp  storage.hpp
backend/src/utils/: logging.hpp
